# Appointment-Backend

./: .env  agentemail.py  auth.py  database.py  doctors.json  main.py  model.py  publicagent.py  pyproject.toml  requirements.txt  schema.py  services.json
